webhook/webhook.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook
  labels:
    app: webhook
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: webhook
  template:
    metadata:
      labels:
        app: webhook
    spec:
      serviceAccountName: deployer
      containers:
        - name: webhook
          image: ghcr.io/brianbrowndev/webhook:latest
          imagePullPolicy: Always
          args:
            - "-hooks=/data/hook.json"
            - "-http-methods=POST"
            - "-port=8085"
            - "-verbose"
            - "-hotreload"
          ports:
            - containerPort: 8085
          volumeMounts:
            - name: config
              mountPath: /data
      imagePullSecrets:
        - name: dockerconfigjson-github-com

      volumes:
        - name: config
          configMap:
            name: webhook
            defaultMode: 0777

---
apiVersion: v1
kind: Service
metadata:
  name: webhook
spec:
  selector:
    app: webhook
  ports:
    - protocol: TCP
      port: 8085
      name: http
  clusterIP: None
  type: ClusterIP
