webhook/nginx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webhook-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - hooks.brianbrown.dev
      secretName: webhook-tls
  rules:
    - host: hooks.brianbrown.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: webhook
              servicePort: http
